# anime-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  docker-image.yml
src/: config.py  database.py  logger.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2025_02_18_2307-bc3a5e6da1ac_user_model.py  2025_02_27_1412-6e3d9b97d73e_user_model.py  2025_03_04_1221-bedb21a5dd75_anime_model.py  2025_03_07_1451-8c5e9e7cbf17_user_rate_model.py  2025_03_11_1726-9261cb6f5be3_add_on_delete_rules.py  2025_03_12_1616-f165d2f8a475_add_nickname_to_user.py
src/api/: __init__.py  auth.py  dependencies.py  exceptions.py  schemas.py
src/api/routers/: __init__.py  anime.py  auth.py  user.py  user_rates.py
src/dao/: anime.py  user.py  user_rate.py
src/exceptions/: auth.py  base.py  repository.py  user.py
src/models/: __init__.py  anime.py  user.py  user_rate.py
src/pages/: __init__.py
src/pages/routers/: __init__.py  index.py
src/schemas/: anime.py  auth.py  user.py  user_rate.py
src/services/: anime.py  user.py  user_rate.py
src/static/styles/: index.css
src/templates/: anime.html.jinja  base.html.jinja  index.html.jinja
src/templates/components/: navbar.html.jinja
src/utils/: auth.py
static/styles/: anime.css  general.css  index.css  navbar.css
tests/: config.py  conftest.py
tests/api/: test_anime.py  test_user.py  test_user_rates.py
tests/factories/: anime.py  user.py  user_rate.py
tests/fixtures/: factories.py
tests/mocks/: __init__.py  anime.py
tests/unit/: test_auth.py
tests/utils/: anime.py  user.py
