[project]
name = "game-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.6",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D", "TD",
    "ANN002", "ANN201", "ANN204",
    "FA102",  "INP001", "RUF002", "A002", "RET504", "RUF001"
]

[tool.ruff.lint.per-file-ignores]
"src/alembic/*" = ["ALL"]   # alembic folder
